--- a/src/VNEDC/spiderweb/templates/spiderweb/spiderweb_config.html
+++ b/src/VNEDC/spiderweb/templates/spiderweb/spiderweb_config.html
@@ -129,7 +129,8 @@
                 "scrollCollapse": true,  // Bật/tắt thu gọn bảng nếu dữ liệu ít hơn chiều cao
                 {#"paging": false,  // Cho phép phân trang#}
                 "searching": true,  // Cho phép tìm kiếm
-                "ordering": true  // Cho phép sắp xếp các cột
+                "ordering": true,  // Cho phép sắp xếp các cột
+                "pageLength": 10
             });
 
             // Toggle switch khi click
