--- a/src/VNEDC/collection/templates/collection/collection_data_import.html
+++ b/src/VNEDC/collection/templates/collection/collection_data_import.html
@@ -20,48 +20,51 @@
         <div class="card" style="width: 100%;">
             <div class="card-body">
                 <h5 class="card-title">Download Template</h5>
-                <p class="card-text">Click download file</p>
-                <a href="{% static '/templates/parameter_define_data_importing_template.xlsx' %}" class="btn btn-primary">下載</a>
-            </div>
-        </div>
-        <div class="d-flex justify-content-start">
-        {% if message %}
-            <div id="alert-message" class="alert alert-success fade show position-absolute top-0 start-50
-            translate-middle-x mt-1 ml-1" role="alert">
-            {{ message }}
-            </div>
+                <p class="card-text">Click here to download</p>
+                <a href="{% static '/templates/parameter_define_data_importing_template.xlsx' %}" class="btn btn-primary">
+                    <i class="fa fa-download"></i>
+                </a>
+                <hr>
 
-            <script>
-                setTimeout(function() {
-                    var alert = document.getElementById("alert-message");
-                    if (alert) {
-                        alert.classList.remove("show");
-                        setTimeout(() => alert.remove(), 500);  // Xóa khỏi DOM sau khi ẩn
-                    }
-                }, 3000);
+                <div class="d-flex justify-content-start">
+                {% if message %}
+                    <div id="alert-message" class="alert alert-success fade show position-absolute top-0 start-50
+                    translate-middle-x mt-1 ml-1" role="alert">
+                    {{ message }}
+                    </div>
 
-                sessionStorage.removeItem('message');
-            </script>
+                    <script>
+                        setTimeout(function() {
+                            var alert = document.getElementById("alert-message");
+                            if (alert) {
+                                alert.classList.remove("show");
+                                setTimeout(() => alert.remove(), 500);  // Xóa khỏi DOM sau khi ẩn
+                            }
+                        }, 3000);
 
-        {% endif %}
-        </div>
+                        sessionStorage.removeItem('message');
+                    </script>
 
-
-{#        <h3 class="mt-2 text-center">{% trans "Upload Location Excel File" %}</h3>#}
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-5">
-                    {% crispy form %}
+                {% endif %}
                 </div>
 
-                <div class="col-12 col-md-1 text-center upload">
-                    <button type="submit" class="btn btn-success">
-                        <i class="fa fa-upload"></i> {% trans "Upload" %}
-                    </button>
-                </div>
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-md-5">
+                            {% crispy form %}
+                        </div>
 
+                        <div class="col-12 col-md-1 text-center upload">
+                            <button type="submit" class="btn btn-success">
+                                <i class="fa fa-upload"></i> {% trans "Upload" %}
+                            </button>
+                        </div>
+
+                    </div>
+                </form>
             </div>
-        </form>
-{% endblock content %}
+        </div>
+
+{% endblock %}
 
