--- a/src/VNEDC/collection/templates/collection/collection_data_import.html
+++ b/src/VNEDC/collection/templates/collection/collection_data_import.html
@@ -21,7 +21,7 @@
             <div class="card-body">
                 <h5 class="card-title">Download Template</h5>
                 <p class="card-text">Click here to download</p>
-                <a href="{% static '/templates/parameter_define_data_importing_template.xlsx' %}" class="btn btn-primary">
+                <a href="{% static '/templates/parameter_define_data_importing_template.xlsx' %}" class="btn btn-info">
                     <i class="fa fa-download"></i>
                 </a>
                 <hr>
