--- a/src/VNEDC/mes/templates/mes/base.html
+++ b/src/VNEDC/mes/templates/mes/base.html
@@ -40,6 +40,9 @@
     <a href="{% url 'monthly_check' %}" class="btn btn-warning btn">
         <i class="fas fa-wrench"></i> Monthly Check
     </a>
+    <a href="{% url 'daily_report_comment' %}" class="btn btn-warning btn">
+        <i class="fas fa-wrench"></i> DailyReport Comment
+    </a>
 </div>
 <div>
 {% block content %}
