--- a/src/VNEDC/mes/templates/mes/daily_report_comment.html
+++ b/src/VNEDC/mes/templates/mes/daily_report_comment.html
@@ -10,15 +10,100 @@
 <style>
 
 </style>
-<script type="text/javascript">
 
-
-</script>
 
 {% endblock js %}
 {% block title %}
 Monthly Check
 {% endblock title %}
 {% block content %}
+    <div class="container-fluid mt-3">
+        <div class="row d-flex justify-content-center">
+            <div class="col-6">
+                <div class="card p-4 shadow-sm">
+                    <form method="post" id="form">
+                        {% crispy form %}
+                        <button type="submit" class="btn btn-primary btn-lg">Save</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <table id="jsGrid"></table>
 
+    </div>
+
+    <script>
+
+    const deleteUrl = "{% url 'daily_report_delete' %}";
+
+    $("#form").on("submit", function(e) {
+        e.preventDefault();
+
+        $.ajax({
+            url: "{% url 'daily_report_comment' %}",
+            type: "POST",
+            data: $(this).serialize(),  // gửi form
+            success: function(response) {
+                $("#id_comment").val('');
+                $("#jsGrid").jsGrid({
+                    width: "100%",
+                    height: "700px",
+
+                    inserting: false,
+                    editing: false,
+                    sorting: true,
+                    paging: false,
+
+                    data: response.data,
+
+                    fields: [
+                        { name: "report_date", type: "date", title: "Date", align: "center" },
+                        { name: "comment", type: "text", title: "Comment", align: "center" },
+                        {
+                            name: "delete",
+                            align: "center",
+                            title: "",
+                            itemTemplate: function(_, item) {
+                                return $("<button>")
+                                    .text("Delete")
+                                    .addClass("btn btn-danger btn-sm")
+                                    .on("click", function () {
+                                        if (confirm("Do you want to delete this one?")) {
+                                            fetch(deleteUrl, {
+                                                method: 'DELETE',
+                                                headers: {
+                                                    'Content-Type': 'application/json',
+                                                    'X-CSRFToken': '{{ csrf_token }}',
+                                                },
+                                                body: JSON.stringify({
+                                                    report_date: item.report_date,
+                                                    comment: item.comment
+                                                })
+                                            })
+                                            .then(response => response.json())
+                                            .then(data => {
+                                                if (data.status === 'ok') {
+                                                    alert("Delete successfully!");
+                                                    $("button[type='submit']").trigger('click');
+                                                } else {
+                                                    alert("Error??");
+                                                }
+                                            })
+                                            .catch(error => {
+                                                alert("Error: " + error);
+                                            });
+                                        }
+                                    });
+                            }
+                        }
+                    ]
+                });
+            },
+            error: function(xhr) {
+                alert("Lỗi: " + JSON.stringify(xhr.responseJSON));
+            }
+        });
+    });
+</script>
 {% endblock content %}
