--- a/src/VNEDC/mes/templates/mes/monthly_check.html
+++ b/src/VNEDC/mes/templates/mes/monthly_check.html
@@ -139,7 +139,7 @@
     }
 
     p {
-        margin-top: 15px; /* Hoặc 'auto' nếu bạn muốn tự động tính toán lại margin */
+        margin-top: 15px;
     }
 
 </style>
